--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
@@ -13,10 +13,10 @@
 
     -fx-border-color: transparent;
     -fx-border-width: 0;
-    -fx-background-radius: 0;
+    -fx-background-radius: 20px;
     -fx-border-radius: 15px;
     -fx-background-color: transparent;
-    -fx-background-radius: 50em;
+
 
 }
 
