--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,6 +18,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -91,6 +95,73 @@
                                         </Text>
                                     </children>
                                 </AnchorPane>
+                        <AnchorPane fx:id="PaneForExit" layoutX="13.0" layoutY="175.0" prefHeight="127.0" prefWidth="615.0" style="-fx-background-color: #A00000;" visible="false">
+                           <children>
+                              <Text layoutX="221.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="     Are you sure?" wrappingWidth="223.8770751953125">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="24.0" />
+                                 </font>
+                                 <fill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="0.9342105388641357" green="0.5665813684463501" blue="0.5665813684463501" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="1.0" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </fill>
+                              </Text>
+                              <RadioButton fx:id="YesExit" layoutX="201.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#leave_definitively" text="YES">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="18.0" />
+                                 </font>
+                                 <textFill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="1.0" green="0.8333333134651184" blue="0.8333333134651184" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="1.0" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </textFill>
+                              </RadioButton>
+                              <RadioButton fx:id="NoExit" layoutX="350.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#keep_playing" text="NO">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="18.0" />
+                                 </font>
+                                 <textFill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="1.0" green="0.7361111044883728" blue="0.7361111044883728" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="1.0" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </textFill>
+                              </RadioButton>
+                           </children>
+                        </AnchorPane>
                             </children>
                         </AnchorPane>
                     </children>
@@ -291,6 +362,17 @@
                     </font>
                 </Label>
             </top>
+         <bottom>
+            <AnchorPane prefHeight="99.0" prefWidth="1510.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="ExitGame_button" layoutX="615.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#ExitGame" prefHeight="45.0" prefWidth="230.0" style="-fx-background-radius: 20px;" text="EXIT GAME" textFill="#fff4f4">
+                     <font>
+                        <Font name="HanziPen SC Regular" size="13.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </bottom>
         </BorderPane>
     </children>
 </StackPane>
