--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -138,8 +139,11 @@
                                        </stops>
                                     </LinearGradient>
                                  </textFill>
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="exitConfirmation" />
+                                 </toggleGroup>
                               </RadioButton>
-                              <RadioButton fx:id="NoExit" layoutX="350.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#keep_playing" text="NO">
+                              <RadioButton fx:id="NoExit" layoutX="350.0" layoutY="64.0" mnemonicParsing="false" onMouseClicked="#keep_playing" text="NO" toggleGroup="$exitConfirmation">
                                  <font>
                                     <Font name="Libian SC Regular" size="18.0" />
                                  </font>
@@ -206,11 +210,7 @@
                             <children>
                                 <AnchorPane layoutY="50.0" prefHeight="194.0" prefWidth="374.0">
                                     <children>
-                                        <ImageView fx:id="commonGoalCard2" fitHeight="175.0" fitWidth="274.0" layoutX="61.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../common%20goal%20cards/9.jpg" />
-                                            </image>
-                                        </ImageView>
+                                        <ImageView fx:id="commonGoalCard2" fitHeight="175.0" fitWidth="274.0" layoutX="61.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
                                         <StackPane layoutX="217.0" layoutY="95.0" prefHeight="71.0" prefWidth="77.0" rotate="-7.6">
                                             <children>
                                                 <ImageView fx:id="tokenCommonCard2" fitHeight="72.0" fitWidth="72.0" pickOnBounds="true" preserveRatio="true" />
