--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -22,6 +21,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Sphere?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -164,6 +164,37 @@
                                     </LinearGradient>
                                  </textFill>
                               </RadioButton>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="PaneForResilience" layoutX="-2.0" layoutY="231.0" prefHeight="189.0" prefWidth="636.0" style="-fx-background-color: #A00000;" visible="false">
+                           <children>
+                              <Text fx:id="TextForResilience" fill="WHITE" layoutX="266.0" layoutY="67.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="121.95062255859375" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="96.0" layoutY="-105.0" prefHeight="99.0" prefWidth="439.0">
+                           <children>
+                              <Sphere fx:id="sphereTurn" layoutX="120.0" layoutY="65.0" radius="14.0"/>
+                              <Text fx:id="turnLabel" layoutX="172.0" layoutY="77.0" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR TURN" wrappingWidth="223.65435791015625">
+                                 <font>
+                                    <Font size="32.0" />
+                                 </font>
+                                 <fill>
+                                    <LinearGradient endX="1.0" endY="1.0">
+                                       <stops>
+                                          <Stop>
+                                             <color>
+                                                <Color red="0.3752436637878418" green="0.7368420958518982" blue="0.3752436637878418" />
+                                             </color>
+                                          </Stop>
+                                          <Stop offset="1.0">
+                                             <color>
+                                                <Color red="1.0" green="1.0" blue="1.0" />
+                                             </color>
+                                          </Stop>
+                                       </stops>
+                                    </LinearGradient>
+                                 </fill>
+                              </Text>
                            </children>
                         </AnchorPane>
                             </children>
@@ -355,13 +386,6 @@
                     </children>
                 </HBox>
             </right>
-            <top>
-                <Label fx:id="OtherPlayerTurnLabel" alignment="TOP_LEFT" prefHeight="55.0" prefWidth="419.0" textAlignment="CENTER" textFill="#f5f2f2" visible="false" BorderPane.alignment="BOTTOM_CENTER">
-                    <font>
-                        <Font name="Libian SC Regular" size="36.0" />
-                    </font>
-                </Label>
-            </top>
          <bottom>
             <AnchorPane prefHeight="99.0" prefWidth="1510.0" BorderPane.alignment="CENTER">
                <children>
